# tailcall

./: Cargo.toml
.github/workflows/: build_matrix.yml  ci.yml
.nightly/: rust-toolchain.toml
benches/: handle_request_bench.rs
examples/: grpc.graphql
src/cli/: metrics.rs  telemetry.rs
src/cli/runtime/: http.rs
src/cli/server/: http_1.rs  http_2.rs  server_config.rs
src/core/: async_graphql_hyper.rs  counter.rs  print_schema.rs  resource_reader.rs  runtime.rs
src/core/blueprint/: blueprint.rs  from_config.rs  mustache.rs  server.rs
src/core/blueprint/operators/: grpc.rs  http.rs
src/core/config/config_module/: merge.rs
src/core/config/directives/: server.rs
src/core/config/transformer/snapshots/: tailcall__core__config__transformer__ambiguous_type__tests__resolve_ambiguous_news_types.snap
src/core/generator/: from_proto.rs
src/core/generator/snapshots/: tailcall__core__generator__from_proto__test__from_proto.snap  tailcall__core__generator__from_proto__test__from_proto_no_pkg_file.snap  tailcall__core__generator__from_proto__test__greetings_proto_file.snap  tailcall__core__generator__from_proto__test__movies.snap  tailcall__core__generator__from_proto__test__nested_types.snap  tailcall__core__generator__from_proto__test__oneof_types.snap  tailcall__core__generator__from_proto__test__optional_fields.snap  tailcall__core__generator__from_proto__test__required_types.snap  tailcall__core__generator__from_proto__test__scalar_types.snap  tailcall__core__generator__generator__test__should_generate_combined_config.snap  tailcall__core__generator__generator__test__should_generate_config_from_proto.snap
src/core/grpc/: request.rs
src/core/http/: request_handler.rs  response.rs  showcase.rs  telemetry.rs
src/core/ir/: error.rs  model.rs
src/core/jit/: builder.rs  error.rs
src/core/jit/synth/: synth.rs
src/core/json/: json_schema.rs
src/core/rest/: endpoint.rs  partial_request.rs
tailcall-aws-lambda/: Cargo.toml
tailcall-aws-lambda/src/: http.rs  main.rs
tailcall-cloudflare/: Cargo.toml  package-lock.json  package.json
tailcall-cloudflare/src/: handle.rs  http.rs
tailcall-cloudflare/tests/: mf.ts
tailcall-http-cache/: Cargo.toml
tailcall-http-cache/src/: cache.rs
tailcall-upstream-grpc/: Cargo.toml  build.rs
tailcall-upstream-grpc/src/: error.rs  main.rs
tailcall-wasm/: Cargo.toml
tailcall-wasm/src/: http.rs  lib.rs
tests/cli/snapshots/: cli_spec__test__generator_spec__tests__cli__fixtures__generator__gen_proto_with_proto_paths_config.md.snap  cli_spec__test__generator_spec__tests__cli__fixtures__generator__proto-connect-rpc.md.snap
tests/core/: spec.rs
tests/core/snapshots/: apollo-tracing.md_merged.snap  call-operator.md_client.snap  call-operator.md_merged.snap  dedupe_batch_query_execution.md_merged.snap  graphql-conformance-019.md_merged.snap  graphql-nested.md_merged.snap  grpc-batch.md_merged.snap  grpc-error.md_merged.snap  grpc-json.md_client.snap  grpc-json.md_merged.snap  grpc-proto-with-same-package.md_client.snap  grpc-proto-with-same-package.md_merged.snap  grpc-reflection.md_client.snap  grpc-reflection.md_merged.snap  grpc-simple.md_client.snap  grpc-simple.md_merged.snap  grpc-url-from-upstream.md_client.snap  nested-recursive-types.md_merged.snap  on-response-body-grpc.md_client.snap  on-response-body-grpc.md_merged.snap  query-depth-limit.md_0.snap  query-depth-limit.md_1.snap  query-depth-limit.md_client.snap  query-depth-limit.md_merged.snap  query-depth-no-limit.md_0.snap  query-depth-no-limit.md_merged.snap  recursive-types.md_merged.snap  test-enum-default.md_client.snap  test-enum-default.md_merged.snap  test-grpc-nested-data.md_error.snap  test-grpc-nested-optional.md_client.snap  test-grpc-nested-optional.md_merged.snap  test-grpc-optional.md_client.snap  test-grpc-optional.md_merged.snap  test-grpc.md_client.snap  test-grpc.md_merged.snap  test-link-support.md_client.snap  test-link-support.md_merged.snap
tests/execution/: call-operator.md  grpc-batch.md  grpc-error.md  grpc-json.md  grpc-proto-with-same-package.md  grpc-reflection.md  grpc-simple.md  grpc-url-from-upstream.md  nested-recursive-types.md  on-response-body-grpc.md  query-depth-limit.md  query-depth-no-limit.md  recursive-types.md  test-enum-default.md  test-grpc-group-by.md  test-grpc-nested-data.md  test-grpc-nested-optional.md  test-grpc-optional.md  test-grpc.md  test-link-support.md
tests/server/config/: example-ec.crt  example-ec.key
