[package]
name = "tailcall"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  ".",
  "tailcall-aws-lambda",
  "tailcall-cloudflare",
  "tailcall-fixtures",
  "tailcall-hasher",
  "tailcall-http-cache",
  "tailcall-macros",
  "tailcall-prettier",
  "tailcall-tracker",
  "tailcall-typedefs",
  "tailcall-typedefs-common",
  "tailcall-upstream-grpc",
  "tailcall-version",
  "tailcall-wasm",
]

[workspace.dependencies]
anyhow = "1.0.82"
async-graphql = { version = "7.0.9" }
bytes = "1"
convert_case = "0.6.0"
derive_more = { version = "1", features = ["from", "debug"] }
futures-util = { version = "0.3.30" }
headers = "0.4"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "tokio", "http1", "http2"] }
indexmap = "2.2.6"
insta = { version = "1.38.0", features = ["json"] }
lazy_static = "1.4.0"
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
  "http2",
], default-features = false }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0.116", features = ["preserve_order"] }
tailcall-valid = "=0.1.1"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["rt", "time"] }
tracing = "0.1.40"
url = { version = "2.5.0", features = ["serde"] }

[[bin]]
name = "tailcall"
path = "src/main.rs"

[features]

# Feature Flag to enable V8.
# V8 currently is not support on all platforms so, we control it via this feature flag.
js = ["dep:rquickjs"]

# Feature Flag to core CLI features.
# This is created to control what we expose for WASM.
# Will be deprecated once we move CLI to it's own crate and WASM builds won't depend on it.
cli = [
  "tokio/fs",
  "tokio/rt-multi-thread",
  "dep:mimalloc",
  "dep:http-cache-reqwest",
  "dep:moka",
  "dep:hyper-rustls",
  "dep:rustls",
  "dep:tokio-rustls",
  "dep:inquire",
  "dep:which",
  "dep:update-informer",
  "opentelemetry_sdk/testing",
  "opentelemetry_sdk/rt-tokio",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry-system-metrics",
  "dep:tailcall-tracker",
  "dep:tailcall-http-cache",
  "dep:tailcall-version",
  "dep:genai",
  "dep:ctrlc",
  "dep:reqwest-middleware",
]

# Feature flag to enable all default features.
# This is used by default locally while developing and on CI.
# We generally want to interface via CLI and have V8 enabled, while running tests.
default = ["cli", "js"]

# Feature flag to force JIT engine inside integration tests
force_jit = []

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true, features = [
  "dynamic-schema",
  "dataloader",
  "apollo_tracing",
  "opentelemetry",
] }
async-graphql-value = "7.0.9"
async-recursion = "1.1.1"
async-std = { version = "1.12.0", features = [
  "wasm-bindgen-futures",
  "unstable",
] }
async-trait = "0.1.80"
base64 = "0.22.1"
bytes = "1"
cache_control = "0.2.0"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
convert_case = { workspace = true }
ctrlc = { version = "3.4.5", optional = true }
dashmap = "6.1.0"
derive-getters = "0.5.0"
derive_more = { workspace = true }
derive_setters = "0.1.6"
dotenvy = "0.15.7"
exitcode = "1.1.2"
fnv = "1.0.7"
futures-channel = { version = "0.3.30" }
futures-timer = { version = "3.0.3", features = ["wasm-bindgen"] }
futures-util = { workspace = true }
genai = { git = "https://github.com/laststylebender14/rust-genai.git", rev = "63a542ce20132503c520f4e07108e0d768f243c3", optional = true }
getrandom = { version = "0.2.14", features = ["js"] }
# async-graphql-extension-apollo-tracing = { git = "https://github.com/async-graphql/async_graphql_apollo_studio_extension" }
# Temporarily disabled due to build issues with protobuf generation (see https://github.com/tailcallhq/tailcall/issues/1722)
headers = { workspace = true }
htpasswd-verify = { version = "0.3.0", git = "https://github.com/twistedfall/htpasswd-verify", rev = "ff14703083cbd639f7d05622b398926f3e718d61" } # fork version that is wasm compatible
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
http-cache-reqwest = { version = "0.14.0", features = [
  "manager-moka",
], default-features = false, optional = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
hyper-rustls = { version = "0.27.0", optional = true }
indenter = "0.3.3"
indexmap = { workspace = true }
inquire = { version = "0.7.5", optional = true }
jsonwebtoken = "9.3.0"
lazy_static = { workspace = true }
lru = { version = "0.12.3" }
# dependencies specific to CLI must have optional = true and the dep should be added to default feature.
# one needs to add default feature tag if it is something IO related or might conflict with WASM

mimalloc = { version = "0.1.41", default-features = false, optional = true }
mime = "0.3.17"
moka = { version = "0.12.7", default-features = false, features = [
  "future",
], optional = true }
nom = "7.1.3"
num = "0.4.3"
num_cpus = "1.16.0"
once_cell = "1.19.0"
opentelemetry = { version = "0.28", features = ["trace", "logs", "metrics"] }
opentelemetry-appender-tracing = { version = "0.28" }
opentelemetry-http = "0.28"
opentelemetry-otlp = { version = "0.28", features = [
  "trace",
  "logs",
  "metrics",
  # required to make grpc requests
  "grpc-tonic",
  "tls-roots",
], optional = true }
opentelemetry-prometheus = "0.28"
opentelemetry-semantic-conventions = "0.28"
opentelemetry-stdout = { version = "0.28", features = [
  "trace",
  "logs",
  "metrics",
] }
opentelemetry-system-metrics = { version = "0.3", optional = true }
opentelemetry_sdk = { version = "0.28", features = [
  "trace",
  "logs",
  "metrics",
] }
path-clean = "=1.0.1"
pathdiff = "0.2.1"
phonenumber = "0.3.4"
pluralizer = "0.4.0"
prometheus = "0.13.4"
prost = "0.13.1"
prost-reflect = { version = "0.14.0", features = ["serde"] }
protox = "0.7.0"
protox-parse = "0.7.0"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { workspace = true }
reqwest-middleware = { version = "0.3", optional = true }
resource = "0.5.0"
rquickjs = { "version" = "0.7.0", optional = true, features = ["macro"] }
rustls = { version = "0.23.5", optional = true, features = [
  "std",
  "ring",
], default-features = false }
# dependencies safe for wasm:

rustls-pemfile = { version = "1.0.4" }
rustls-pki-types = "1.5.0"
schemars = { version = "0.8.17", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_borrow = { version = "0.7.1", default-features = false }
serde_path_to_error = "0.1.16"
serde_qs = "0.13"
serde_urlencoded = "0.7.1"
serde_yaml_ng = "0.10.0"
strum = "0.26.2"
strum_macros = "0.26.4"
tailcall-chunk = "0.3.0"
tailcall-hasher = { path = "tailcall-hasher" }
tailcall-http-cache = { path = "tailcall-http-cache", optional = true }
tailcall-macros = { path = "tailcall-macros" }
tailcall-tracker = { path = "tailcall-tracker", optional = true }
tailcall-typedefs-common = { path = "./tailcall-typedefs-common" }
tailcall-valid = { workspace = true }
tailcall-version = { path = "./tailcall-version", optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { version = "0.26", optional = true }
tonic = { version = "0.12", default-features = false }
tonic-types = "0.12"
# TODO: disable some levels with features?
tracing = { workspace = true }
tracing-opentelemetry = "0.29"
tracing-subscriber = { version = "0.3.18", features = [
  "default",
  "fmt",
  "env-filter",
] }
ttl_cache = "0.5.1"
unicode-segmentation = "1.12.0"
update-informer = { version = "1.1.0", default-features = false, features = [
  "github",
  "reqwest",
], optional = true }
url = { workspace = true }
urlencoding = "2.1.3"
which = { version = "7.0.0", optional = true }

# to build rquickjs bindings on systems without builtin bindings
[target.'cfg(all(target_os = "windows", target_arch = "x86"))'.dependencies]
rquickjs = { "version" = "0.7.0", optional = true, features = [
  "macro",
  "bindgen",
] }

[dev-dependencies]
bincode = "1.3.3"
cacache = { version = "13.0.0", features = ["mmap"] }
criterion = "0.5.1"
datatest-stable = "0.2.9"
flate2 = "1.0.30"
http-cache-semantics = { version = "2.1.0", features = ["serde"] }
httpmock = "0.7.0"
insta = { workspace = true }
maplit = "1.0.2"
markdown = "1.0.0-alpha.17"
pretty_assertions = "1.4.0"
stripmargin = "0.1.1"
tailcall-fixtures = { path = "./tailcall-fixtures" }
tailcall-prettier = { path = "tailcall-prettier" }
tempfile = "3.10.1"
test-log = { version = "0.2.16", default-features = false, features = [
  "color",
  "trace",
] }
tokio-test = "0.4.4"

# Boost execution_spec snapshot diffing performance
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = 'fat'
debug = false
incremental = false
overflow-checks = false

[profile.release.package.tailcall-cloudflare]
strip = true
codegen-units = 1
opt-level = 'z'

[profile.benchmark]
inherits = "release"
debug = true

[[bench]]
name = "tailcall_benches"
harness = false

[[test]]
name = "execution_spec"
harness = false

[[test]]
name = "cli_spec"
path = "tests/cli/gen.rs"
harness = false

[[test]]
name = "json_to_config_spec"
path = "src/core/generator/tests/json_to_config_spec.rs"
harness = false
